Correct footer z-index v 1.4

--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -34,4 +34,9 @@
     margin: 0 auto;
     padding-bottom: 2.75rem;
   }
+
+  .article__header {
+    padding-inline: 3rem;
+    margin-inline: auto;
+  }
 }
