--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,6 +5,7 @@
   padding-block: 1rem;
   border-radius: 29px;
   transition: 0.3s ease-in-out;
+  z-index: 2;
   &:hover,
   &:focus,
   &:active {
